[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/Blue/levels/BlueCoding01.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/CodingLevels/Levels/01-HelloWorld.gd" type="Script" id=2]
[ext_resource path="res://ui/Coding/InteractiveSession.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/CodingLevels/Levels/01-Codes.gd" type="Script" id=4]

[node name="01-HelloWorld" type="Node2D"]
script = ExtResource( 2 )
coding_resources_object = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractiveSession" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="BlueCoding01" parent="." instance=ExtResource( 1 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="build" from="CanvasLayer/InteractiveSession" to="." method="_on_InteractiveSession_build"]
